--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
 "settings": {
 "clients": [
 {
-"password": "GCP OOREDOO DZ",
+"password": "d2cb8181-233c-4d18-9972-8a1b04db0044",
 "level": 0
 }
 ],
