--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
 "settings": {
 "clients": [
 {
-"password": "d2cb8181-233c-4d18-9972-8a1b04db0044",
+"password": "khaled-surfing-404-9972-8a1b04db0044",
 "level": 0
 }
 ],
@@ -15,7 +15,7 @@
 "streamSettings": {
 "network": "ws",
 "wsSettings": {
-"path": "/khaled_Surfing"
+"path": "/GCP_OOREDOO_DZ"
 }
 }
 }
